added db and updated frontend

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -118,3 +118,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+.rotating{
+  animation: rotate 200s linear infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
